force-app/main/default/objects/Fee_Schedule_Rate__c/Fee_Schedule_Rate__c.object-meta.xml
<CustomObject>
    <description>Effective-dated CPT or HCPCS unit rate within a fee schedule.</description>
    <label>Fee Schedule Rate</label>
    <nameField>
        <displayFormat>RATE-{00000000}</displayFormat>
        <label>Fee Schedule Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Schedule Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>