force-app/main/default/objects/Fee_Schedule_Rate__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <label>Effective Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>