force-app/main/default/objects/Fee_Schedule_Rate__c/fields/Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Fee_Schedule__c</fullName>
    <label>Fee Schedule</label>
    <referenceTo>Fee_Schedule__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>