force-app/main/default/objects/Fee_Schedule_Rate__c/fields/Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Code__c</fullName>
    <label>Procedure Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>