force-app/main/default/objects/Fee_Schedule_Rate__c/fields/Procedure_Ref__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure Reference</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Fee Schedule Rates</relationshipLabel>
    <relationshipName>Fee_Schedule_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>