force-app/main/default/objects/Fee_Schedule_Rate__c/validationRules/End_On_Or_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_On_Or_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Effective_End__c)), Effective_End__c &lt; Effective_Start__c)</errorConditionFormula>
    <errorMessage>Effective end must be on or after effective start.</errorMessage>
</ValidationRule>