force-app/main/default/objects/Fee_Schedule_Rate__c/validationRules/Positive_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>Rate_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Unit rate must be greater than zero.</errorMessage>
</ValidationRule>