force-app/main/default/objects/Fee_Schedule_Rate__c/validationRules/Professional_Code_System.validationRule-meta.xml
<ValidationRule>
    <fullName>Professional_Code_System</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISPICKVAL(Procedure_Code_System__c, &quot;CPT&quot;), ISPICKVAL(Procedure_Code_System__c, &quot;HCPCS&quot;)))</errorConditionFormula>
    <errorMessage>Fee schedule rates must use CPT or HCPCS.</errorMessage>
</ValidationRule>